# dcm2niix

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  arrange.py  config.json  dcm2niix.py  manifest.json  metadata.py  pydeface.py  pyproject.toml  requirements.txt  resolve.py  run.py  setup.cfg  setup.py  utils.py
.circleci/: config.yml
.github/: release-drafter.yml
.github/workflows/: release-drafter.yml
assets/: README.md  pydeface_config.json
dcm2niix/: arrange.py  dcm2niix_run.py  dcm2niix_utils.py  prepare.py
dcm2niix_gear/dcm2niix/: arrange.py  dcm2niix_run.py  interfaces.py  prepare.py
dcm2niix_gear/pydeface/: pydeface_run.py
dcm2niix_gear/utils/: metadata.py  resolve.py
docs/: gear_workflow.odg
fw_gear_dcm2niix/: __init__.py
fw_gear_dcm2niix/dcm2niix/: arrange.py  dcm2niix_run.py  dcm2niix_utils.py  interfaces.py  prepare.py
fw_gear_dcm2niix/pydeface/: pydeface_run.py
fw_gear_dcm2niix/utils/: metadata.py  parse_config.py  resolve.py
pydeface/: pydeface_run.py
tests/: Dockerfile  test_arrange.py  test_pydeface.py  test_utils.py
tests/assets/: dicom_nested.tgz  dicom_nested_error.tgz  dicom_nested_uneven.tgz  dicom_single.tgz  empty_archive.tgz  incorrect_input.txt  parrec_single.tgz
tests/instance/: assess_instance_runs.py  submit_instance_runs.py
tests/local/: build_gear.sh  defaults_with_modality_and_classification_set.json  defaults_with_modality_set.json  defaults_without_modality_or_classification_set.json  fix_dcm_vols.py
utils/: metadata.py  parse_config.py  resolve.py
(+6 files in other folders)
